--- a/installation/docker-amd64-cuda/from-scratch-template/environment.yml
+++ b/installation/docker-amd64-cuda/from-scratch-template/environment.yml
@@ -1,4 +1,4 @@
-name: template-project-name
+name: swiss-alignment
 channels:
   - conda-forge
 dependencies:
@@ -10,4 +10,4 @@ dependencies:
       - wandb
       - pre-commit
       - black
-prefix: /opt/conda/envs/template-project-name
+prefix: /opt/conda/envs/swiss-alignment
