--- a/installation/docker-arm64-cuda/requirements.txt
+++ b/installation/docker-arm64-cuda/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+accelerate==0.34.0
 aiohappyeyeballs==2.3.5
 aiohttp==3.10.1
 aiosignal==1.3.1
@@ -34,6 +35,7 @@ cmake==3.30.2
 comm==0.2.2
 confection==0.1.5
 contourpy==1.2.1
+coverage==7.6.1
 cuda-python==12.5.0
 cudf==24.6.0
 cugraph==24.6.0
@@ -51,20 +53,28 @@ dask==2024.5.1
 dask-cuda==24.6.0
 dask-cudf==24.6.0
 dask-expr==1.1.1
+dataclasses-json==0.6.7
+datasets==2.21.0
 debugpy==1.8.5
 decorator==5.1.1
+deepspeed==0.15.0
 defusedxml==0.7.1
+diffusers==0.30.2
+dill==0.3.8
 distlib==0.3.8
 distributed==2024.5.1
 distributed-ucxx==0.38.0
+distro==1.9.0
 dm-tree==0.1.8
 docker-pycreds==0.4.0
+docstring_parser==0.16
 einops==0.8.0
 entrypoints==0.4
 exceptiongroup==1.2.2
 execnet==2.1.1
 executing==2.0.1
 expecttest==0.1.3
+fastcore==1.7.4
 fasteners==0.19
 fastjsonschema==2.20.0
 fastrlock==0.8.2
@@ -75,12 +85,15 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.6.1
 gast==0.6.0
+ghapi==1.0.6
 gitdb==4.0.11
 GitPython==3.1.43
 grpcio==1.62.1
 h11==0.14.0
+hjson==3.1.0
 httpcore==1.0.5
 httpx==0.27.0
+huggingface-hub==0.24.6
 hydra-core==1.3.2
 hypothesis==5.35.1
 identify==2.6.0
@@ -94,6 +107,7 @@ isoduration==20.11.0
 isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
@@ -118,9 +132,11 @@ language_data==1.2.0
 lazy_loader==0.4
 librmm==24.6.0
 librosa==0.10.1
+liger-kernel==0.2.1
 lightning-thunder==0.2.0.dev0
 lightning-utilities==0.11.6
 lintrunner==0.12.5
+llm-blender==0.0.2
 llvmlite==0.42.0
 locket==1.0.0
 looseversion==1.3.0
@@ -128,6 +144,7 @@ marisa-trie==1.2.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
@@ -137,6 +154,7 @@ mock==5.1.0
 mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
+multiprocess==0.70.16
 murmurhash==1.0.10
 mypy-extensions==1.0.0
 nbclient==0.10.0
@@ -161,6 +179,7 @@ nvtx==0.2.5
 nx-cugraph==24.6.0
 omegaconf==2.3.0
 onnx==1.16.0
+openai==1.43.0
 opencv==4.7.0
 opt-einsum==3.3.0
 optree==0.12.1
@@ -168,9 +187,11 @@ overrides==7.7.0
 packaging==23.2
 pandas==2.2.2
 pandocfilters==1.5.1
+parameterized==0.9.0
 parso==0.8.4
 partd==1.4.2
 pathspec==0.12.1
+peft==0.12.0
 pexpect==4.9.0
 pillow==10.4.0
 pip==24.2
@@ -188,6 +209,7 @@ psutil==6.0.0
 ptyprocess==0.7.0
 PuLP==2.9.0
 pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyarrow==16.1.0
 pybind11==2.13.4
 pybind11_global==2.13.4
@@ -204,6 +226,7 @@ pynvjitlink==0.2.3
 pynvml==11.4.1
 pyparsing==3.1.2
 pytest==8.1.1
+pytest-cov==5.0.0
 pytest-flakefinder==1.1.0
 pytest-rerunfailures==14.0
 pytest-shard==0.1.2
@@ -225,13 +248,16 @@ rfc3986-validator==0.1.1
 rich==13.7.1
 rmm==24.6.0
 rpds-py==0.20.0
+safetensors==0.4.4
 scikit-learn==1.5.1
 scipy==1.14.0
 Send2Trash==1.8.3
+sentencepiece==0.2.0
 sentry-sdk==2.13.0
 setproctitle==1.3.3
 setuptools==70.3.0
 shellingham==1.5.4
+shtab==1.7.1
 six==1.16.0
 smart-open==7.0.4
 smmap==5.0.1
@@ -257,6 +283,7 @@ thinc==8.2.5
 threadpoolctl==3.5.0
 thriftpy2==0.5.0
 tinycss2==1.3.0
+tokenizers==0.19.1
 tomli==2.0.1
 toolz==0.12.1
 torch==2.5.0a0+872d972e41.nv24.8
@@ -266,11 +293,15 @@ tornado==6.2
 tqdm==4.66.5
 traitlets==5.14.3
 transformer_engine==1.9.0+ba36f90
+transformers==4.44.2
 treelite==4.1.2
+trl==0.10.1
 typer==0.12.4
 types-dataclasses==0.6.6
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
+typing-inspect==0.9.0
+tyro==0.8.10
 tzdata==2024.1
 ucx-py==0.38.0
 ucxx==0.38.0
@@ -289,6 +320,7 @@ wheel==0.44.0
 wrapt==1.16.0
 xdoctest==1.0.2
 xgboost==2.0.3
+xxhash==3.5.0
 yarl==1.9.4
 zarr==2.18.2
 zict==3.0.0
