--- a/installation/docker-amd64-cuda/requirements-freeze.txt
+++ b/installation/docker-amd64-cuda/requirements-freeze.txt
@@ -15,13 +15,13 @@ async-timeout==4.0.3
 attrs==23.2.0
 audioread==3.0.1
 beautifulsoup4==4.12.3
+# bitsandbytes==0.43.3
 black==24.8.0
 bleach==6.1.0
 blinker==1.4
 blis==0.7.11
 cachetools==5.3.3
 catalogue==2.0.10
-causal-conv1d==1.4.0
 certifi==2024.7.4
 cffi==1.16.0
 cfgv==3.4.0
@@ -75,7 +75,7 @@ exceptiongroup==1.2.1
 execnet==2.1.1
 executing==2.0.1
 expecttest==0.1.3
-fastapi==0.114.1
+fastapi==0.114.2
 fasteners==0.19
 fastjsonschema==2.20.0
 fastrlock==0.8.2
@@ -99,14 +99,15 @@ httpcore==1.0.5
 httplib2==0.20.2
 httptools==0.6.1
 httpx==0.27.2
-huggingface-hub==0.24.6
+huggingface-hub==0.24.7
 hydra-core==1.3.2
 hypothesis==5.35.1
-identify==2.6.0
+identify==2.6.1
 idna==3.7
 igraph==0.11.6
 importlib_metadata==7.1.0
 iniconfig==2.0.0
+intel-openmp==2021.4.0
 interegular==0.3.3
 ipykernel==6.29.5
 ipython==8.21.0
@@ -137,7 +138,6 @@ lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lazy_loader==0.4
 librosa==0.10.1
-liger-kernel==0.2.1
 lightning-thunder==0.2.0.dev0
 lightning-utilities==0.11.3.post0
 lintrunner==0.12.5
@@ -146,7 +146,6 @@ llvmlite==0.42.0
 lm-format-enforcer==0.10.6
 locket==1.0.0
 looseversion==1.3.0
-mamba-ssm==2.2.2
 marisa-trie==1.2.0
 Markdown==3.6
 markdown-it-py==3.0.0
@@ -158,6 +157,9 @@ mdit-py-plugins==0.4.1
 mdurl==0.1.2
 mistral_common==1.4.0
 mistune==3.0.2
+mkl==2021.1.1
+mkl-devel==2021.1.1
+mkl-include==2021.1.1
 mock==5.1.0
 more-itertools==8.10.0
 mpmath==1.3.0
@@ -190,7 +192,7 @@ nx-cugraph==24.4.0
 oauthlib==3.2.2
 omegaconf==2.3.0
 onnx==1.16.0
-openai==1.44.1
+openai==1.45.0
 opencv==4.7.0
 opt-einsum==3.3.0
 optree==0.12.1
@@ -292,6 +294,7 @@ stack-data==0.6.3
 starlette==0.38.5
 sympy==1.13.0
 tabulate==0.9.0
+tbb==2021.13.0
 tblib==3.0.0
 tensorboard==2.9.0
 tensorboard-data-server==0.6.1
@@ -316,9 +319,8 @@ traitlets==5.9.0
 transformer-engine==1.8.0+37280ec
 transformers==4.44.2
 treelite==4.1.2
-triton==3.0.0
 trl==0.10.1
-trove-classifiers==2024.7.2
+trove-classifiers==2024.9.12
 typer==0.12.3
 types-dataclasses==0.6.6
 typing_extensions==4.12.0
@@ -345,7 +347,7 @@ Werkzeug==3.0.3
 wheel==0.43.0
 wrapt==1.16.0
 xdoctest==1.0.2
-xformers==0.0.27
+xformers==0.0.27+184b2808.d20240913
 xgboost==2.0.3
 xxhash==3.5.0
 yarl==1.9.4
