--- a/installation/docker-arm64-cuda/Dockerfile
+++ b/installation/docker-arm64-cuda/Dockerfile
@@ -42,10 +42,16 @@ ENV PIP_CACHE_DIR=/root/.cache/pip
 RUN pip freeze > ${DEPENDENCIES_DIR}/requirements-freeze-before-pip-install.txt
 RUN pip list --format freeze > ${DEPENDENCIES_DIR}/requirements-list-before-pip-install.txt
 
+COPY requirements.txt ${DEPENDENCIES_DIR}/requirements.txt
 RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
     pip install -r ${DEPENDENCIES_DIR}/requirements.txt
 
 # For reproducible requirements use the following after getting the requirements-freeze.txt file from the first build.
+#COPY requirements-freeze.txt ${DEPENDENCIES_DIR}/requirements-freeze.txt
+#RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
+#    pip install --no-deps -r ${DEPENDENCIES_DIR}/requirements-freeze.txt
+
+# Install bitsandbytes from source.
 RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
     git clone --depth 1 --branch "0.43.3" https://github.com/bitsandbytes-foundation/bitsandbytes.git \
     && cd bitsandbytes && cmake -DCOMPUTE_BACKEND=cuda -S . && make \
