--- a/installation/docker-amd64-cuda/requirements.txt
+++ b/installation/docker-amd64-cuda/requirements.txt
@@ -8,7 +8,10 @@ pre-commit
 black
 # Alignment
 deepspeed
+accelerate
 peft
-diffusers
-llm-blender
 trl
+# TRL extensions
+llm-blender
+diffusers
+
