--- a/installation/docker-amd64-cuda/requirements-freeze.txt
+++ b/installation/docker-amd64-cuda/requirements-freeze.txt
@@ -4,7 +4,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.4.0
+anyio==4.6.0
 apex==0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -15,8 +15,8 @@ async-timeout==4.0.3
 attrs==23.2.0
 audioread==3.0.1
 beautifulsoup4==4.12.3
-# bitsandbytes==0.43.3
-black==24.8.0
+# bitsandbytes==0.44.1 # From source
+black==24.10.0
 bleach==6.1.0
 blinker==1.4
 blis==0.7.11
@@ -52,22 +52,21 @@ dask-cuda==24.4.0
 dask-cudf==24.4.0
 dask-expr==0.4.0
 dataclasses-json==0.6.7
-datasets==3.0.0
+datasets==3.0.1
 dbus-python==1.2.18
 debugpy==1.8.2
 decorator==5.1.1
-deepspeed==0.15.1
+deepspeed==0.15.3
 defusedxml==0.7.1
-diffusers==0.30.2
+diffusers==0.31.0
 dill==0.3.8
 diskcache==5.6.3
-distlib==0.3.8
+distlib==0.3.9
 distributed==2024.1.1
 distro==1.7.0
 distro-info==1.1+ubuntu0.2
 dm-tree==0.1.8
 docker-pycreds==0.4.0
-docstring_parser==0.16
 editables==0.5
 einops==0.8.0
 entrypoints==0.4
@@ -75,18 +74,18 @@ exceptiongroup==1.2.1
 execnet==2.1.1
 executing==2.0.1
 expecttest==0.1.3
-fastapi==0.114.2
+fastapi==0.115.0
 fasteners==0.19
 fastjsonschema==2.20.0
 fastrlock==0.8.2
 filelock==3.15.4
 flash-attn==2.4.2
-flashinfer==0.1.6
+# flashinfer==0.1.6  # From source
 fonttools==4.53.1
 frozenlist==1.4.1
 fsspec==2024.5.0
 gast==0.6.0
-gguf==0.9.1
+gguf==0.10.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.32.0
@@ -94,12 +93,13 @@ google-auth-oauthlib==0.4.6
 grpcio==1.62.1
 h11==0.14.0
 hatchling==1.25.0
+hf_transfer==0.1.8
 hjson==3.1.0
-httpcore==1.0.5
+httpcore==1.0.6
 httplib2==0.20.2
 httptools==0.6.1
 httpx==0.27.2
-huggingface-hub==0.24.7
+huggingface-hub==0.25.1
 hydra-core==1.3.2
 hypothesis==5.35.1
 identify==2.6.1
@@ -150,17 +150,18 @@ marisa-trie==1.2.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-marshmallow==3.22.0
+marshmallow==3.23.1
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
-mistral_common==1.4.0
+mistral_common==1.4.4
 mistune==3.0.2
 mkl==2021.1.1
 mkl-devel==2021.1.1
 mkl-include==2021.1.1
 mock==5.1.0
+modelscope==1.18.1
 more-itertools==8.10.0
 mpmath==1.3.0
 msgpack==1.0.8
@@ -179,7 +180,7 @@ nodeenv==1.9.1
 notebook==6.4.10
 numba==0.59.1
 numcodecs==0.11.0
-numpy==1.24.4
+numpy==1.26.4
 nvfuser==0.2.6a0+f73ff1b
 nvidia-cudnn-frontend==1.5.1
 nvidia-dali-cuda120==1.39.0
@@ -192,7 +193,7 @@ nx-cugraph==24.4.0
 oauthlib==3.2.2
 omegaconf==2.3.0
 onnx==1.16.0
-openai==1.45.0
+openai==1.51.0
 opencv==4.7.0
 opt-einsum==3.3.0
 optree==0.12.1
@@ -204,7 +205,7 @@ parso==0.8.4
 partd==1.4.2
 partial-json-parser==0.2.1.1.post4
 pathspec==0.12.1
-peft==0.12.0
+peft==0.13.2
 pexpect==4.9.0
 pillow==10.4.0
 pip==24.1.2
@@ -213,7 +214,7 @@ pluggy==1.5.0
 ply==3.11
 polygraphy==0.49.12
 pooch==1.8.2
-pre-commit==3.8.0
+pre_commit==4.0.1
 preshed==3.0.9
 prometheus_client==0.20.0
 prometheus-fastapi-instrumentator==7.0.0
@@ -232,8 +233,8 @@ pybind11_global==2.13.1
 pycocotools==2.0+nv0.8.0
 pycountry==24.6.1
 pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 PyGObject==3.42.1
 PyJWT==2.3.0
@@ -258,7 +259,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 raft-dask==24.4.0
 rapids-dask-dependency==24.4.0a0
-ray==2.35.0
+ray==2.37.0
 referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
@@ -273,11 +274,11 @@ scipy==1.13.1
 SecretStorage==3.3.1
 Send2Trash==1.8.3
 sentencepiece==0.2.0
-sentry-sdk==2.14.0
+sentry-sdk==2.18.0
 setproctitle==1.3.3
 setuptools==68.2.2
+setuptools-scm==8.1.0
 shellingham==1.5.4
-shtab==1.7.1
 six==1.16.0
 smart-open==7.0.4
 smmap==5.0.1
@@ -291,7 +292,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 stack-data==0.6.3
-starlette==0.38.5
+starlette==0.38.6
 sympy==1.13.0
 tabulate==0.9.0
 tbb==2021.13.0
@@ -306,8 +307,9 @@ thinc==8.2.5
 threadpoolctl==3.5.0
 thriftpy2==0.5.0
 tiktoken==0.7.0
+timm==0.9.10
 tinycss2==1.3.0
-tokenizers==0.19.1
+tokenizers==0.20.0
 tomli==2.0.1
 toolz==0.12.1
 torch==2.4.0a0+3bcc3cddb5.nv24.7
@@ -317,37 +319,35 @@ tornado==6.4
 tqdm==4.66.4
 traitlets==5.9.0
 transformer-engine==1.8.0+37280ec
-transformers==4.44.2
+transformers==4.46.1
 treelite==4.1.2
-trl==0.10.1
-trove-classifiers==2024.9.12
+trl==0.12.0
+trove-classifiers==2024.10.21.16
 typer==0.12.3
 types-dataclasses==0.6.6
 typing_extensions==4.12.0
 typing-inspect==0.9.0
-tyro==0.8.10
 tzdata==2024.1
 ucx-py==0.37.0
 unattended-upgrades==0.1
 urllib3==2.0.7
-uvicorn==0.30.6
+uvicorn==0.31.0
 uvloop==0.20.0
-virtualenv==20.26.4
-vllm==0.6.0+cu125
-vllm-flash-attn==2.6.2+cu125
+virtualenv==20.27.1
+# vllm==0.6.1.dev240+gb01f24d1.d20241004.cu125  # From source
 wadllib==1.3.6
-wandb==0.18.0
+wandb==0.18.5
 wasabi==1.1.3
 watchfiles==0.24.0
 wcwidth==0.2.13
 weasel==0.4.1
 webencodings==0.5.1
-websockets==13.0.1
+websockets==13.1
 Werkzeug==3.0.3
 wheel==0.43.0
 wrapt==1.16.0
 xdoctest==1.0.2
-xformers==0.0.27+184b2808.d20240913
+# xformers==0.0.28+1fc661fe.d20241004  # From source
 xgboost==2.0.3
 xxhash==3.5.0
 yarl==1.9.4
