--- a/installation/docker-amd64-cuda/requirements.txt
+++ b/installation/docker-amd64-cuda/requirements.txt
@@ -7,10 +7,11 @@ wandb
 pre-commit
 black
 # Alignment
+accelerate >= 1.0
 deepspeed
-accelerate
 peft
-trl
+transformers >= 4.46.1
+trl >= 1.12
 # TRL extensions
 llm-blender
 diffusers
