--- a/installation/docker-amd64-cuda/requirements-freeze.txt
+++ b/installation/docker-amd64-cuda/requirements-freeze.txt
@@ -4,7 +4,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.6.0
+anyio==4.6.2.post1
 apex==0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -31,6 +31,7 @@ cloudpathlib==0.18.1
 cloudpickle==3.0.0
 cmake==3.30.0
 comm==0.2.2
+compressed-tensors==0.6.0
 confection==0.1.5
 contourpy==1.2.1
 cryptography==3.4.8
@@ -52,7 +53,7 @@ dask-cuda==24.4.0
 dask-cudf==24.4.0
 dask-expr==0.4.0
 dataclasses-json==0.6.7
-datasets==3.0.1
+datasets==3.1.0
 dbus-python==1.2.18
 debugpy==1.8.2
 decorator==5.1.1
@@ -74,13 +75,13 @@ exceptiongroup==1.2.1
 execnet==2.1.1
 executing==2.0.1
 expecttest==0.1.3
-fastapi==0.115.0
+fastapi==0.115.4
 fasteners==0.19
 fastjsonschema==2.20.0
 fastrlock==0.8.2
 filelock==3.15.4
 flash-attn==2.4.2
-# flashinfer==0.1.6  # From source
+# flashinfer==0.1.6 # From source
 fonttools==4.53.1
 frozenlist==1.4.1
 fsspec==2024.5.0
@@ -93,13 +94,12 @@ google-auth-oauthlib==0.4.6
 grpcio==1.62.1
 h11==0.14.0
 hatchling==1.25.0
-hf_transfer==0.1.8
 hjson==3.1.0
 httpcore==1.0.6
 httplib2==0.20.2
-httptools==0.6.1
+httptools==0.6.4
 httpx==0.27.2
-huggingface-hub==0.25.1
+huggingface-hub==0.26.2
 hydra-core==1.3.2
 hypothesis==5.35.1
 identify==2.6.1
@@ -115,7 +115,7 @@ ipython-genutils==0.2.0
 jedi==0.19.1
 jeepney==0.7.1
 Jinja2==3.1.4
-jiter==0.5.0
+jiter==0.7.0
 joblib==1.4.2
 json5==0.9.25
 jsonschema==4.23.0
@@ -161,7 +161,6 @@ mkl==2021.1.1
 mkl-devel==2021.1.1
 mkl-include==2021.1.1
 mock==5.1.0
-modelscope==1.18.1
 more-itertools==8.10.0
 mpmath==1.3.0
 msgpack==1.0.8
@@ -193,8 +192,9 @@ nx-cugraph==24.4.0
 oauthlib==3.2.2
 omegaconf==2.3.0
 onnx==1.16.0
-openai==1.51.0
+openai==1.53.0
 opencv==4.7.0
+opencv-python-headless==4.10.0.84
 opt-einsum==3.3.0
 optree==0.12.1
 outlines==0.0.46
@@ -225,7 +225,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyairports==2.1.1
-pyarrow==17.0.0
+pyarrow==18.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pybind11==2.13.1
@@ -259,7 +259,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 raft-dask==24.4.0
 rapids-dask-dependency==24.4.0a0
-ray==2.37.0
+ray==2.38.0
 referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
@@ -292,7 +292,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 stack-data==0.6.3
-starlette==0.38.6
+starlette==0.41.2
 sympy==1.13.0
 tabulate==0.9.0
 tbb==2021.13.0
@@ -307,9 +307,8 @@ thinc==8.2.5
 threadpoolctl==3.5.0
 thriftpy2==0.5.0
 tiktoken==0.7.0
-timm==0.9.10
 tinycss2==1.3.0
-tokenizers==0.20.0
+tokenizers==0.20.1
 tomli==2.0.1
 toolz==0.12.1
 torch==2.4.0a0+3bcc3cddb5.nv24.7
@@ -331,10 +330,10 @@ tzdata==2024.1
 ucx-py==0.37.0
 unattended-upgrades==0.1
 urllib3==2.0.7
-uvicorn==0.31.0
-uvloop==0.20.0
+uvicorn==0.32.0
+uvloop==0.21.0
 virtualenv==20.27.1
-# vllm==0.6.1.dev240+gb01f24d1.d20241004.cu125  # From source
+# vllm==0.6.1.dev469+g1c8a1762.cu125 # From source
 wadllib==1.3.6
 wandb==0.18.5
 wasabi==1.1.3
@@ -347,7 +346,7 @@ Werkzeug==3.0.3
 wheel==0.43.0
 wrapt==1.16.0
 xdoctest==1.0.2
-# xformers==0.0.28+1fc661fe.d20241004  # From source
+# xformers==0.0.28+1fc661fe.d20241104 # From source
 xgboost==2.0.3
 xxhash==3.5.0
 yarl==1.9.4
