--- a/template/template-variables.env
+++ b/template/template-variables.env
@@ -8,12 +8,12 @@
 
 # This is the distribution name, used to `pip install PROJECT_NAME`.
 # $NEW_PROJECT_NAME Will replace $OLD_PROJECT_NAME in all the template.
-OLD_PROJECT_NAME="template-project-name"
+OLD_PROJECT_NAME="swiss-alignment"
 NEW_PROJECT_NAME="swiss-alignment" # Hyphen or underscore as word separator.
 
 # This is the package name used by `import PACKAGE_NAME`.
 # $NEW_PACKAGE_NAME will replace $OLD_PACKAGE_NAME in all the template.
-OLD_PACKAGE_NAME="template_package_name"
+OLD_PACKAGE_NAME="swiss_alignment"
 NEW_PACKAGE_NAME="swiss_alignment" # Underscore as word separator.
 
 # Will be the Python version used in the environment (if it doesn't have Python already).
