--- a/installation/docker-arm64-cuda/compose-base.yaml
+++ b/installation/docker-arm64-cuda/compose-base.yaml
@@ -2,10 +2,12 @@ services:
   build-args:
     build:
       args:
-        # Pytorch 2.4.0a0+f70bd71a48, NVIDIA CUDA 12.5.0.23, Python 3.10.
-        # https://docs.nvidia.com/deeplearning/frameworks/pytorch-release-notes/rel-24-06.html
+        BASE_IMAGE: docker.io/skandermoalla/vllm:v0.6.6.post1-32717f53-arm64-cuda-gh200
+        # vLLM custom-build image from https://github.com/skandermoalla/vllm-build
+        # Bsed on the nvcr.io/nvidia/pytorch:24.10-py3
+        # With Pytorch 2.5.0a0+e000cf0ad9, NVIDIA CUDA 12.6.2, NVIDIA NCCL 2.22.3, Python 3.10.
+        # https://docs.nvidia.com/deeplearning/frameworks/pytorch-release-notes/rel-24-10.html
         # https://catalog.ngc.nvidia.com/orgs/nvidia/containers/pytorch
-        BASE_IMAGE: nvcr.io/nvidia/pytorch:24.07-py3
         GIT_IMAGE: docker.io/alpine/git:2.40.1            # https://hub.docker.com/r/alpine/git/tags
         # You can find the entrypoint by running `docker inspect BASE_IMAGE | grep -A 3 Entrypoint`
         # If there is no entrypoint, you can leave it empty.
