--- a/src/swiss_alignment/configs/accelerate/ddp-1x1.yaml
+++ b/src/swiss_alignment/configs/accelerate/ddp-1x1.yaml
@@ -4,11 +4,13 @@ distributed_type: MULTI_GPU
 downcast_bf16: 'no'
 enable_cpu_affinity: false
 gpu_ids: all
-machine_rank: 0
+machine_rank: 0             # Edit at runtime with SLURM
+main_process_ip: nid006405  # Edit at runtime with SLURM
+main_process_port: 29400
 main_training_function: main
 mixed_precision: bf16
-num_machines: 1
-num_processes: 4
+num_machines: 1             # Edit at runtime with SLURM
+num_processes: 1          # Edit at runtime with SLURM
 rdzv_backend: static
 same_network: true
 tpu_env: []
