--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,8 @@ dmypy.json
 .pyre/
 
 # JetBrains
-.idea/
+.idea/*
+!.idea/runConfigurations/
 
 # macOS
 .DS_Store
@@ -143,6 +144,6 @@ outputs/*
 !outputs/README.md
 
 wandb
-slurm-*.out
+**/*.out
 
 third-party
