--- a/installation/docker-arm64-cuda/compose.yaml
+++ b/installation/docker-arm64-cuda/compose.yaml
@@ -42,6 +42,9 @@ services:
     environment:
       PROJECT_ROOT_AT: ${PROJECT_ROOT_AT}
       WANDB_API_KEY: ${WANDB_API_KEY}
+      HF_TOKEN: ${HF_TOKEN}
+      PROJECT_NAME: ${PROJECT_NAME}
+      PACKAGE_NAME: ${PACKAGE_NAME}
     ipc: host                 # Edit as needed (NGC default recommendations, see /opt/nvidia/entrypoint.d/70-shm-check.sh).
     ulimits:                  # Edit as needed (NGC default recommendations, see /opt/nvidia/entrypoint.d/70-shm-check.sh).
       memlock: -1
