--- a/src/swiss_alignment/configs/model/mistralai-mistral-7b-instruct.yaml
+++ b/src/swiss_alignment/configs/model/mistralai-mistral-7b-instruct.yaml
@@ -19,8 +19,12 @@ model_args:
     - up_proj
     - down_proj
 
-model_pad_token_id: 0  # <unk>
-model_eos_token_id: null # keep default.
+tokenizer_args:
+  tokenizer_name_or_path: mistralai/Mistral-7B-Instruct-v0.2
+  trust_remote_code: true
+  chat_template_name: null # keep default.
+  model_pad_token_id: 0  # <unk>
+  model_eos_token_id: null # keep default.
 
 ref_completion_generation:
   # sources
