--- a/src/swiss_alignment/configs/trl-sft.yaml
+++ b/src/swiss_alignment/configs/trl-sft.yaml
@@ -35,9 +35,10 @@ training_args:
   lr_scheduler_type: cosine
   warmup_ratio: 0.1
   num_train_epochs: 1
+  dataset_kwargs:
+    skip_prepare_dataset: false # true for PLW: Requires custom dataset preprocessing
+  remove_unused_columns: true # false for PLW: makes custom fields (like 'completion_mask') available inside compute_loss function
   packing: false
-  #skip_prepare_dataset: true # TODO
-  remove_unused_columns: false # For PLW: makes custom fields (like 'completion_mask') available inside compute_loss function
   dataloader_drop_last: true
   per_device_train_batch_size: 2
   gradient_accumulation_steps: 16
