computing generation ratio

--- a/src/swiss_alignment/configs/trl-plw.yaml
+++ b/src/swiss_alignment/configs/trl-plw.yaml
@@ -10,7 +10,7 @@ plw_args:
   prompt_loss_weight: 0.1
 
 training_args:
-  dataloader_drop_last: false
+  dataloader_drop_last: true
   dataset_kwargs:
     skip_prepare_dataset: true # For PLW: Requires custom dataset preprocessing
   remove_unused_columns: false # For PLW: makes custom fields (like 'completion_mask') available inside compute_loss function
