--- a/src/swiss_alignment/configs/dataset_preprocessing.yaml
+++ b/src/swiss_alignment/configs/dataset_preprocessing.yaml
@@ -5,9 +5,9 @@ defaults:
   - _self_
 
 dataset_args:
-  dataset_name: ${data_dir}/shared/datasets/tulu-3-sft-mixture # allenai/tulu-3-sft-mixture
-  val_ratio: 0.05
-  stratify_by_column: source
+  dataset_name: ${data_dir}/shared/datasets/tulu-3-sft-mixture # or equivalently allenai/tulu-3-sft-mixture
+  val_ratio: 0.05 # ratio of the training dataset to be used for validation
+  stratify_by_column: source # If set, ensures the distribution of this column is preserved across splits
   output_path: ${data_dir}/shared/datasets/tulu-3-sft-mixture-split
 
 seed: 42
