--- a/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
+++ b/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
@@ -10,5 +10,6 @@ model_args:
 tokenizer_args:
   tokenizer_name_or_path: meta-llama/Llama-3.1-8B
   trust_remote_code: true
+  add_bos: false
   model_pad_token_id: 0  # <unk>
   model_eos_token_id: null # keep default. (128001)
