--- a/src/swiss_alignment/configs/model/mistralai-mistral-7b-instruct.yaml
+++ b/src/swiss_alignment/configs/model/mistralai-mistral-7b-instruct.yaml
@@ -22,6 +22,7 @@ model_args:
 tokenizer_args:
   tokenizer_name_or_path: mistralai/Mistral-7B-Instruct-v0.2
   trust_remote_code: true
+  add_bos: false
   model_pad_token_id: 0  # <unk>
   model_eos_token_id: null # keep default.
 
