--- a/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
+++ b/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
@@ -9,6 +9,9 @@ model_args:
 
 tokenizer_args:
   tokenizer_name_or_path: meta-llama/Llama-3.1-8B
+  chat_template_name: simple_chat
   trust_remote_code: true
+  padding_side: right
+  add_bos: false
   model_pad_token_id: 0  # <unk>
   model_eos_token_id: null # keep default. (128001)
