--- a/src/swiss_alignment/configs/dataset_preprocessing.yaml
+++ b/src/swiss_alignment/configs/dataset_preprocessing.yaml
@@ -5,7 +5,7 @@ defaults:
   - _self_
 
 dataset_args:
-  dataset_name: ${data_dir}/shared/datasets/tulu-3-sft-mixture # allenai/tulu-3-sft-mixture
+  dataset_name: ${data_dir}/shared/datasets/tulu-3-sft-mixture # or equivalently allenai/tulu-3-sft-mixture
   output_path: ${data_dir}/shared/datasets/tulu-3-sft-mixture-split
   train_split:
     name: train
