--- a/src/swiss_alignment/configs/trl-sft.yaml
+++ b/src/swiss_alignment/configs/trl-sft.yaml
@@ -9,7 +9,7 @@ defaults:
   # Model (from the configs/model/ directory).
   - model: meta-llama-3-1-8b
   # Dataset (from the configs/dataset/ directory).
-  - dataset: magpieair
+  - dataset: tulu-3-sft-mixture-split
   # Optional preset for training parameters.
   - optional preset: none
 
@@ -31,26 +31,27 @@ script_args:
 training_args:
   bf16: true
   max_seq_length: 2048
-  learning_rate: 2.0e-5
+  learning_rate: 5.0e-06
   lr_scheduler_type: cosine
-  warmup_ratio: 0.1
-  num_train_epochs: 1
+  warmup_ratio: 0.03
+  weight_decay: 0.0
+  num_train_epochs: 5
   packing: false
   dataloader_drop_last: true
-  per_device_train_batch_size: 2
-  gradient_accumulation_steps: 16
+  per_device_train_batch_size: 2 # note, this is set up for 4 GPUs
+  gradient_accumulation_steps: 16 # effective batch size 128 with 4 nodes
   gradient_checkpointing: true
   gradient_checkpointing_kwargs:
     use_reentrant: false # https://pytorch.org/docs/stable/checkpoint.html, https://github.com/huggingface/trl/issues/1348
   average_tokens_across_devices: true # More accurate loss.
   logging_first_step: true
-  logging_steps: 5
+  logging_steps: 25
   eval_strategy: steps
-  eval_steps: 100
+  eval_steps: 50
   eval_on_start: true
   per_device_eval_batch_size: 2
   save_strategy: steps
-  save_steps: 100
+  save_steps: 50
   report_to: wandb
   seed: ${seed}
   dataloader_num_workers: 8
