--- a/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
+++ b/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
@@ -12,6 +12,6 @@ tokenizer_args:
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
-  add_bos: true
+  add_bos: false
   model_pad_token_id: 0  # <unk>
   model_eos_token_id: null # keep default. (128001)
