--- a/src/swiss_alignment/configs/trl-sft.yaml
+++ b/src/swiss_alignment/configs/trl-sft.yaml
@@ -21,7 +21,6 @@ defaults:
 
 dataset_args:
   debug_oom: false # Reorder the dataset with largest batch first to test OOM
-  # set this to true
   debug_subsample:
     train: 0
     eval: 0
@@ -32,7 +31,7 @@ script_args:
 training_args:
   bf16: true
   max_seq_length: 2048
-  # take a loop at dpr - max_norm something
+  # TODO: max_grad_norm: 10000
   learning_rate: 5.0e-06
   lr_scheduler_type: linear
   warmup_ratio: 0.03
@@ -41,7 +40,7 @@ training_args:
   packing: false
   dataloader_drop_last: true
   per_device_train_batch_size: 2 # note, this is set up for 4 GPUs
-  gradient_accumulation_steps: 16 # effective batch size 128 with 4 nodes
+  gradient_accumulation_steps: 4 # effective batch size 128 with 4 nodes
   gradient_checkpointing: true
   gradient_checkpointing_kwargs:
     use_reentrant: false # https://pytorch.org/docs/stable/checkpoint.html, https://github.com/huggingface/trl/issues/1348
