--- a/src/swiss_alignment/configs/trl-sft.yaml
+++ b/src/swiss_alignment/configs/trl-sft.yaml
@@ -30,7 +30,7 @@ script_args:
   dataset_test_split: ${dataset_args.eval_split.name}
 training_args:
   bf16: true
-  max_seq_length: 2048
+  max_seq_length: 4096
   # TODO: max_grad_norm: 10000
   learning_rate: 5.0e-06
   lr_scheduler_type: linear
@@ -55,6 +55,7 @@ training_args:
   save_steps: 50
   report_to: wandb
   seed: ${seed}
+  dataset_num_proc: 8
   dataloader_num_workers: 8
 
 seed: 42
