Removed `hydra-core` from the requirements and added `antlr4-python3-runtime==4.11.1`. This ensures compatibility and includes necessary updates for the environment.

--- a/installation/docker-arm64-cuda/requirements.txt
+++ b/installation/docker-arm64-cuda/requirements.txt
@@ -1,7 +1,6 @@
 # Template
 hatchling
 editables
-hydra-core
 tqdm
 wandb
 pre-commit
@@ -26,3 +25,4 @@ tenacity
 tree-sitter
 tree-sitter-python
 gradio-client
+antlr4-python3-runtime==4.11.1
