--- a/installation/docker-arm64-cuda/requirements.txt
+++ b/installation/docker-arm64-cuda/requirements.txt
@@ -10,7 +10,7 @@ black
 accelerate
 deepspeed<=0.15.4
 peft
-transformers
+git+https://github.com/swiss-ai/transformers.git@swissai-model # swiss-ai fork of transformers
 trl
 # TRL extensions
 llm-blender
