--- a/src/swiss_alignment/configs/accelerate/ds-zero3.yaml
+++ b/src/swiss_alignment/configs/accelerate/ds-zero3.yaml
@@ -4,6 +4,7 @@ deepspeed_config:
   deepspeed_multinode_launcher: standard
   offload_optimizer_device: none
   offload_param_device: none
+  zero3_save_16bit_model: true
   zero3_init_flag: true
   zero_stage: 3
 distributed_type: DEEPSPEED
